--- a/src/layout/notices/_style.scss
+++ b/src/layout/notices/_style.scss
@@ -4,6 +4,10 @@
 	top: 0;
 	left: 0;
 	right: 0;
+
+	@include standalone() {
+		top: 1.25rem;
+	}
 }
 
 .notices__items-enter-active,
